--- a/package.json
+++ b/package.json
@@ -69,5 +69,8 @@
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@types/aos": "^3.0.7"
   }
 }
