--- a/package.json
+++ b/package.json
@@ -55,14 +55,14 @@
     "eslint-config-next": "13.5.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
-    "next": "13.5.1",
+    "next": "^15.5.0",
     "next-themes": "^0.3.0",
     "nextra": "^2.8.0",
     "nextra-theme-docs": "^2.8.0",
     "postcss": "8.4.30",
-    "react": "18.2.0",
+    "react": "^19.1.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^19.1.1",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
@@ -76,5 +76,8 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.7"
+  },
+  "volta": {
+    "node": "18.17.0"
   }
 }
