--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@next/mdx": "^15.5.0",
     "@next/swc-wasm-nodejs": "13.5.1",
     "@notionhq/client": "^4.0.1",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -61,12 +62,16 @@
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
-    "zod": "^3.23.8"
+    "velite": "^0.2.4",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
