--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@next/mdx": "^15.5.0",
+    "@mdx-js/react": "^3.1.0",
     "@next/swc-wasm-nodejs": "13.5.1",
-    "@notionhq/client": "^4.0.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -51,6 +50,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
+    "gray-matter": "^4.0.3",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
     "next": "15.5.0",
@@ -62,9 +62,6 @@
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
-    "rehype-autolink-headings": "^7.1.0",
-    "rehype-slug": "^6.0.0",
-    "remark-gfm": "^4.0.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
@@ -74,10 +71,16 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/mdx": "^3.1.0",
+    "@next/mdx": "^15.5.0",
     "@types/aos": "^3.0.7",
     "@types/node": "20.19.11",
     "@types/react": "18.3.24",
     "eslint-config-next": "15.5.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.1",
     "typescript": "5.9.2"
   }
 }
